Fix content not wrapping correctly

--- a/src/components/todo/style/todo-item.scss
+++ b/src/components/todo/style/todo-item.scss
@@ -1,4 +1,6 @@
 .todo-item {
+  overflow-wrap: break-word;
+
   p,
   span {
     font-size: 20px;
